# DocQA

./: .gitignore  README.md  index.html
docqa/: README.md  mkdocs.yml  pyproject.toml
docqa-api/: README.md  mkdocs.yml  pyproject.toml
docqa-api/docs/: index.md
docqa-api/docs/pages/: api.md  user-requirement.md
docqa-api/site/: 404.html  index.html
docqa-api/site/notebook/docqa/: index.html
docqa-api/site/notebook/mvp/: index.html
docqa-api/site/pages/api/: index.html
docqa-api/site/pages/architecture/: index.html
docqa-api/site/pages/user-requirement/: index.html
docqa-api/site/search/: search_index.json
docqa-api/src/docqa_api/: __init__.py
docqa-api/src/docqa_api/api/: __init__.py  deps.py  main.py  routes.py
docqa-api/tests/: conftest.py  test_api.py  test_api_integration.py  test_api_unit.py
docqa/docs/notebook/: docqa.ipynb  mvp.ipynb
docqa/docs/pages/: api.md  user-requirement.md
docqa/notebooks/: MVP.ipynb  Using DocQA.ipynb
docqa/notebooks/faiss_index/: index.faiss  index.pkl
docqa/site/: 404.html  index.html
docqa/site/pages/architecture/: index.html
docqa/site/styles/: extra.css
docqa/src/apps/api/: routes.py
docqa/src/docqa/: __init__.py  config.py
docqa/src/docqa/chunking/: __init__.py  splitter.py
docqa/src/docqa/indexing/: __init__.py  faiss_store.py
docqa/src/docqa/llm/: prompts.py  providers.py
docqa/src/docqa/loaders/: __init__.py  json.py  pdf.py
docqa/src/docqa/pipeline/: engine.py
docqa/src/docqa/retrieval/: __init__.py  retriever.py
docqa/tests/: conftest.py  test_api.py  test_qaengine.py  test_retriever.py  test_settings.py
docqa/tests/data/: sample.json
documents/: questions.json  sample_json.json
notebook/mvp/: index.html
pages/api/: index.html
pages/architecture/: index.html
pages/user-requirement/: index.html
search/: search_index.json
