[project]
name = "docqa-api"
version = "0.1.0"
description = "FastAPI server for DocQA - Document Question Answering System"
authors = [{ name = "Soham Dandapath", email = "soham.dandapath@gmail.com" }]
readme = "README.md"
[tool.poetry.dependencies]
python = "<3.15,>=3.13"


# Local core package (editable / relative)
docqa = { path = "../docqa", develop = true }

fastapi = { version = ">=0.127.0,<0.128.0", extras = ["standard"] }
uvicorn = ">=0.40.0,<0.41.0"
python-multipart = ">=0.0.21,<0.0.22"
python-dotenv = ">=1.2.1,<2.0.0"
jupyterlab = "^4.5.1"

[tool.poetry]
packages = [{ include = "docqa_api", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = ">=0.28.1,<0.29.0"
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-material = ">=9.7.1,<10.0.0"
mkdocs-jupyter = ">=0.25.1,<0.26.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short -v"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
