[project]
name = "docqa"
version = "0.1.0"
description = ""
authors = [
    {name = "Soham Dandapath",email = "soham.dandapath@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0.0,>=3.13"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
]

[tool.poetry]
packages = [{include = "docqa", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
