[project]
name = "docqa"
version = "0.1.0"
description = ""
authors = [
    {name = "Soham Dandapath",email = "soham.dandapath@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "jq (>=1.10.0,<2.0.0)",
    "mkdocs-jupyter (>=0.25.1,<0.26.0)",
]

[tool.poetry]
packages = [{include = "docqa", from = "src"}]

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-material = ">=9.7.1,<10.0.0"
jupyter = ">=1.1.1,<2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
